--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+    
 <head>
     <title>Welcome to Cornerstone</title>
     <link rel="stylesheet" href="/styles/style.css?version=19061101">
@@ -22,38 +22,38 @@
 <body scroll="no" style="background: black;">
     <div id="mobile-wrapper">
         <div id="portal">
-            <a id="events" href="/tonight/">
-                <img src="ref/portal_images/events.jpg">
+            <a id="tonight" href="/tonight/">
+                <!-- <img src="ref/portal_images/events.jpg"> -->
                 <div class="overlay">
-                    <h2 id="events-text">Tonight</h2>
+                    <h2 id="tonight-text">Tonight</h2>
                 </div>
             </a>
 
             <a id="im-new" href="/new/index.html">
-                <img src="/ref/portal_images/new.jpg">
+                <!-- <img src="/ref/portal_images/new.jpg"> -->
                 <div class="overlay">
-                    <h2 id="new-text">I'm New</h2>
+                    <h2 id="im-new-text">I'm New</h2>
                 </div>
             </a>
 
             <a id="events" href="/events/index.html">
-                <img src="ref/portal_images/events.jpg">
+                <!-- <img src="ref/portal_images/events.jpg"> -->
                 <div class="overlay">
                     <h2 id="events-text">Events</h2>
                 </div>
             </a>
 
             <a id="give" href="https://app.easytithe.com/mobi/?uid=corn1601251">
-                <img src="ref/portal_images/give.jpg">
+                <!-- <img src="ref/portal_images/give.jpg"> -->
                 <div class="overlay">
                     <h2 id="give-text">Give</h2>
                 </div>
             </a>
 
-            <a id="give" href="https://cag.org">
-                <img src="ref/portal_images/cag.jpg">
+            <a id="cag-website" href="https://cag.org">
+                <!-- <img src="ref/portal_images/cag.jpg"> -->
                 <div class="overlay">
-                    <h2 id="give-text">CAG.org</h2>
+                    <h2 id="cag-website-text">CAG.org</h2>
                 </div>
             </a>
         </div>
