--- a/new/index.html
+++ b/new/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf8">
-    <title>New to Cornerstone?</title>
+    <title>New to Doulos</title>
     <link rel="stylesheet" href="/styles/style.css?version=19061101">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
