--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -25,14 +25,80 @@
     </div>
     <ul id="leaders">
         <li>
-            <img src="/ref/new_page/staff.jpg">
+            <img src="/ref/leaders/PMatthew.jpg">
             <h1>Pastor Matthew</h1>
             <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
                 efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
         </li>
         <li>
-            <img src="/ref/new_page/staff.jpg">
-            <h1>Pastor Matthew</h1>
+            <img src="/ref/leaders/Zach.jpg">
+            <h1>Zach</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Aaron.jpg">
+            <h1>Aaron</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Adam.jpg">
+            <h1>Adam</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Azalea.jpg">
+            <h1>Azalea</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Demi.jpg">
+            <h1>Demi</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Diana.jpg">
+            <h1>Diana</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Hiama.jpg">
+            <h1>Hiama</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Keenan.jpg">
+            <h1>Keenan</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Kristen.jpg">
+            <h1>Kristen</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Lily.jpg">
+            <h1>Lily</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Mari.jpg">
+            <h1>Mari</h1>
+            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
+                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+        </li>
+        <li>
+            <img src="/ref/leaders/Sam.jpg">
+            <h1>Sam</h1>
             <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
                 efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
         </li>
