--- a/smallgroups/index.html
+++ b/smallgroups/index.html
@@ -26,13 +26,14 @@
 </head>
 
 <body onload="getData();">
-
     <!-- Tonight -->
     <section id="announcments">
         <div class="banner">
             <img src="/ref/portal_images/events.jpg">
             <h1>Small Groups</h1>
         </div>
+
+        <a class="button" href="/tonight/">Back to Tonight</a>
 
         <!-- Will be generated from Firebase -->
         <ul id="announcment-section"></ul>
