Reformated small groups button

--- a/tonight/index.html
+++ b/tonight/index.html
@@ -27,20 +27,16 @@
 
 <body onload="getData();">
 
-    <section>
-        <a class="image-button" href="/smallgroups/">
-            <img src="/ref/new_page/about.jpg">
-            <div class="overlay">
-                <div class="image-button--text">Small Groups</div>
-            </div>
-        </a>
-    </section>
-
     <!-- Tonight -->
     <section id="announcments">
         <div class="banner">
             <img src="/ref/portal_images/events.jpg">
             <h1>Happening Tonight</h1>
+        </div>
+        <br>
+
+        <div class="center">
+            <a class="button" href="/smallgroups/">Small Groups</a>
         </div>
 
         <!-- Will be generated from Firebase -->
