Removed banner background

--- a/tonight/index.html
+++ b/tonight/index.html
@@ -30,7 +30,7 @@
     <!-- Tonight -->
     <section id="announcments">
         <div class="banner">
-            <img src="/ref/portal_images/events.jpg">
+            <!-- <img src="/ref/portal_images/events.jpg"> -->
             <h1>Happening Tonight</h1>
         </div>
         <br>
