Renamed buttons and titles

--- a/admin/editor/index.html
+++ b/admin/editor/index.html
@@ -37,7 +37,7 @@
 <body>
     <header>
         <div class="center">
-            <h1>Announcments</h1>
+            <h1>Doulos Web App</h1>
             <a href="#signout" onclick="signOut()">Sign Out</a><br>
             <h2>Editors</h2>
             <a id="tonight-button" href="#tonight" onclick="switchEditor('tonight')">Happening Tonight</a>
@@ -53,7 +53,7 @@
             </ul>
 
             <div class="center">
-                <button onclick="createAnnouncement()">Create Announcement</button>
+                <button onclick="createAnnouncement()">Create Item</button>
             </div>
         </section>
         <!-- <iframe id="events-preview" src="../../events/"></iframe> -->
@@ -87,7 +87,6 @@
     <span style="display:block; height: 150px;"></span>
     <footer id="events-footer">
         <h2 id="update-status"></h2>
-        <div class="comment">(All updates are live. The preview only shows the live bulletin.)</div>
         <button id="update-button">Update</button>
     </footer>
 
