Updated leaders description

--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -33,8 +33,10 @@
         <li>
             <img src="/ref/leaders/Zach.jpg">
             <h1>Zach</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I am neither especially clever nor especially gifted. I am only curious, curiosity is what brought me to
+                God and his grace. Seeing my imperfection is what led me to my repentance, and through Jesus I am free
+                from sin.
+                <br>P.S. – If you want people to remember you, borrow money from them.</p>
         </li>
         <li>
             <img src="/ref/leaders/Aaron.jpg">
@@ -68,9 +70,10 @@
         </li>
         <li>
             <img src="/ref/leaders/Hiama.jpg">
-            <h1>Hiama</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <h1>Hiama Halay</h1>
+            <p>I began attending Cornerstone Church in September 2016. One of my favorite things about this church is
+                the youth and diversity of its members. I’m passionate about sharing the gospel with young adults, and
+                I’m always up for a random trip to the beach!</p>
         </li>
         <li>
             <img src="/ref/leaders/Keenan.jpg">
