Added app script, logo, targets

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 <body scroll="no" style="background: black;">
     <div id="mobile-wrapper">
         <div id="portal">
+            <a id="logo" href="/tonight/">
+                <img src="ref/logos/doulos_logo_white.png">
+            </a>
+
             <a id="tonight" href="/tonight/">
                 <!-- <img src="ref/portal_images/events.jpg"> -->
                 <div class="overlay">
@@ -43,14 +47,14 @@
                 </div>
             </a>
 
-            <a id="give" href="https://app.easytithe.com/mobi/?uid=corn1601251">
+            <a id="give" target="_blank" href="https://app.easytithe.com/mobi/?uid=corn1601251">
                 <!-- <img src="ref/portal_images/give.jpg"> -->
                 <div class="overlay">
                     <h2 id="give-text">Give</h2>
                 </div>
             </a>
 
-            <a id="cag-website" href="https://cag.org">
+            <a id="cag-website" target="_blank" href="https://cag.org">
                 <!-- <img src="ref/portal_images/cag.jpg"> -->
                 <div class="overlay">
                     <h2 id="cag-website-text">CAG.org</h2>
@@ -58,6 +62,7 @@
             </a>
         </div>
     </div>
+    <script src="/scripts/app.js"></script>
 </body>
 
 </html>
