Added app script

--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -106,6 +106,7 @@
                 efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
         </li>
     </ul>
+    <script src="/scripts/app.js"></script>
 </body>
 
 </html>
