--- a/tonight/index.html
+++ b/tonight/index.html
@@ -30,7 +30,6 @@
     <!-- Tonight -->
     <section id="announcments">
         <div class="banner">
-            <!-- <img src="/ref/portal_images/events.jpg"> -->
             <h1>Happening Tonight</h1>
         </div>
         <br>
@@ -42,6 +41,7 @@
         <!-- Will be generated from Firebase -->
         <ul id="announcment-section"></ul>
     </section>
+    <script src="/scripts/app.js"></script>
     <script src="/scripts/happening_now.js"></script>
     <script src="./scripts/announcments_firebase.js?version=19042501"></script>
 </body>
