--- a/events/index.html
+++ b/events/index.html
@@ -37,6 +37,7 @@
         <!-- Will be generated from Firebase -->
         <ul id="announcment-section"></ul>
     </section>
+    <script src="/scripts/app.js"></script>
     <script src="/scripts/happening_now.js"></script>
     <script src="./scripts/announcments_firebase.js?version=19042501"></script>
 </body>
