Removed back button for consistancy

--- a/smallgroups/index.html
+++ b/smallgroups/index.html
@@ -33,11 +33,10 @@
             <h1>Small Groups</h1>
         </div>
 
-        <a class="button" href="/tonight/">Back to Tonight</a>
-
         <!-- Will be generated from Firebase -->
         <ul id="announcment-section"></ul>
     </section>
+    <script src="/scripts/app.js"></script>
     <script src="/scripts/happening_now.js"></script>
     <script src="./scripts/smallgroups_firebase.js?version=19042501"></script>
 </body>
