--- a/admin/editor/index.html
+++ b/admin/editor/index.html
@@ -73,7 +73,7 @@
                         <input class="dissabled" id="button-label" disabled placeholder="Button Label">
                         <input class="dissabled" id="button-link" disabled placeholder="https://cag.org/">
                     </div>
-                    <div class="input-text">Description</div>
+                    <div class="input-text">Description (&lt;br&gt; = new line)</div>
                     <textarea id="description-input" placeholder="An example description..."></textarea>
                     <div class="center">
                         <button id="discard-button">Discard</button>
