Updated leader descriptions

--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -27,8 +27,11 @@
         <li>
             <img src="/ref/leaders/PMatthew.jpg">
             <h1>Pastor Matthew</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I am deeply passionate about Jesus, my wife Brandi, my son Bennett, and Doulos. Seven years ago Doulos
+                was birthed out of a dream to cultivate a community of young adults who love Jesus! Over the years God
+                has been so faithful to be there every step of the way. I love this quote by Craig Groeschel "Our life
+                is the sum total of small decisions we make" Each day I try to make small decisions that make me more
+                like Jesus and love people the way He does! </p>
         </li>
         <li>
             <img src="/ref/leaders/Zach.jpg">
@@ -41,20 +44,33 @@
         <li>
             <img src="/ref/leaders/Aaron.jpg">
             <h1>Aaron</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I love Jesus, my family, and spending time with others. I am passionate about young adults living like
+                Jesus in every aspect of our lives. Doulos has been a place where I can be apart of what God wants to do
+                in our community and in our world. My favorite past time is listening to and telling stories. Fun fact
+                about myself I love taking on various spice challenges.</p>
         </li>
         <li>
             <img src="/ref/leaders/Adam.jpg">
             <h1>Adam</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I have served the DOULOS community since the Lord led me here to Cornerstone Church in 2014, answering my
+                prayer for a community that shares my heart for and relationship with Him. That same year He introduced
+                me to my wife, Diana, as we served together on the worship team; 4 years later we were joyfully married.
+                My passion is equipping people to see the awesomeness of God for themselves, the Love He has for them
+                and the truth of Luke 10: 25-28. I enjoy music of all types, singing, thoughtful artistic expression,
+                learning, connecting with people and cultures through language, sharing my story and hearing the life
+                stories of others; all of which, I believe, are a part of the greater story that God is writing.</p>
         </li>
         <li>
             <img src="/ref/leaders/Azalea.jpg">
             <h1>Azalea</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>"A encounter of love with Jesus was what changed the direction of my life in 2015."
+                <br>My biggest dream it’s to take God’s love message to the whole world and exalt to Jesus my Savior. 
+                I’m passionate about being able to help people around me specially with words of encouragement, i attend
+                Cornerstone and I have the opportunity to serve in the ministry of Young Adults (Doulos) and Fusion
+                Youth (FY). I am quite friendly and communicative, i love meeting new places, making new friends,
+                reading the Bible and books that can help me to grow and keep my mind set, my favorite preacher and
+                writer is Joyce Meyer, my favorite place is the beach, i’m a Dental Technician/Dental Assistant by
+                profession, and I live each day expectantly to see how God is moving in our community. </p>
         </li>
         <li>
             <img src="/ref/leaders/Demi.jpg">
@@ -65,12 +81,17 @@
         <li>
             <img src="/ref/leaders/Diana.jpg">
             <h1>Diana</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>
+                I am a member of Cornerstone. I have been part of the young adults ministry since I came in 2010. Music
+                is one of my passions, especially worship, that my husband Adam and I share. My desire is to help women
+                and families, specifically ones with young infants, as motherhood can be most challenging at that age.
+                As well, to help others through my testimony and the various challenging things in my life God has
+                carried me through.
+            </p>
         </li>
         <li>
             <img src="/ref/leaders/Hiama.jpg">
-            <h1>Hiama Halay</h1>
+            <h1>Hiama</h1>
             <p>I began attending Cornerstone Church in September 2016. One of my favorite things about this church is
                 the youth and diversity of its members. I’m passionate about sharing the gospel with young adults, and
                 I’m always up for a random trip to the beach!</p>
@@ -84,8 +105,15 @@
         <li>
             <img src="/ref/leaders/Kristen.jpg">
             <h1>Kristen</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I am first and foremost a worshiper of Jesus, completely in awe of His goodness and mercy. Currently I am
+                the department chair and music teacher at Greenbelt ES and have the privilege of leading worship at
+                Doulos and serving as a youth leader for Fusion. I love to travel and celebrate the uniqueness of Gods
+                creation as well as read, paint, and play music. I am also a foodie and do my best work in the presence
+                of Chinese food and fortune cookies. However, I am most passionate about helping others develop their
+                God given gifts and walk out the lifestyle of a servant. “When I stand before God at the end of my life,
+                I would hope that I would not have a single bit of talent left, and could say, I used everything You
+                gave me.” -Emma Bombeck. In every season of my life I am listening for His voice and trusting God’s
+                heart, all the while singing praises at the feet of my King.</p>
         </li>
         <li>
             <img src="/ref/leaders/Lily.jpg">
@@ -96,14 +124,52 @@
         <li>
             <img src="/ref/leaders/Mari.jpg">
             <h1>Mari</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I am just a simple girl who loves Jesus. Six years ago I moved from Puerto Rico with a desire to touch
+                our world with original songs meant to worship God. It was a matter of time where God continuously
+                teaches me that we were made to worship Him with everything we do, no matter where we are. I love the
+                fact that God created us and loves us uniquely, therefore it is my desire to encourage the people that
+                surround me to be who God intended them to be.
+                (Sponsored by lots of prayers and coffee :-)</p>
         </li>
         <li>
             <img src="/ref/leaders/Sam.jpg">
             <h1>Sam</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>Sam York is an educator, musician, artist and world traveller. He went to college in rural Pennsylvania
+                and also in downtown Baltimore. He currently teaches at Reid Temple Christian Academy in Glenn Dale. He
+                loves his students, the youngest being two years old and the oldest in 8th grade (for more on his
+                teaching follow him at @art_nsoul on Instagram). If he is not traveling or teaching, find him at a
+                fantastic restaurant or listening to his Disney playlist.</p>
+        </li>
+        <li>
+            <!-- <img src="/ref/leaders/Sam.jpg"> -->
+            <h1>Demi</h1>
+            <p>Love God & love people unconditionally. My desire is always to simply be a little vessel of God's love
+                Emoji . I have a deep passion for people and the arts and I'm forever inspired to create through His
+                creation. Music, painting, writing-- you name it, I'll love it! Share with me! God has shown me through
+                the years what it is to bring beauty from ashes in my own life and I only wish to point people to Jesus
+                so He can work through them to show them their own beauty. Seeing things from His eyes has changed my
+                perspective in more than one way and has given me an appreciation of this beautiful life that God has
+                given us and just a love for people. There is power in unity-- especially in unity with Christ. Hoping
+                to just bring even a little speck of hope & joy to people’s lives through Christ now and eventually in
+                missions. More of Him, less of me.
+                <br>“And above all these put on love, which binds everything together in perfect harmony”- Colossians
+                3:14</p>
+        </li>
+        <li>
+            <!-- <img src="/ref/leaders/Sam.jpg"> -->
+            <h1>Travis</h1>
+            <p>
+                This is Travis Phelix here. I enjoy sports, nature (particularly the water and the sky) and making and
+                building things with my own hands. One of my favorite passages of scripture is the golden rule (Matt
+                7:12) treat others as you want to be treated. These are words to live by because everyone is made in
+                God's image and we should treat them as such. Growing up I saw this rule put to the test quite often and
+                also broke it myself. I was bullied and in turn bullied others. My mother always told me I have a big
+                heart and I would believe her but also the pain of disappointment would cloud my judgement at times. I
+                can often see Jesus in myself like how I love to marvel at His creation. How I care for others even when
+                I feel so uncared for myself. Or how I like to see things come alive in the essence of carpentry and
+                manual labor. God is in all and above all so I long to see God and love in every one amidst the chaos
+                and heartache. Peace and Love, Travis.
+            </p>
         </li>
     </ul>
     <script src="/scripts/app.js"></script>
