--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -171,6 +171,18 @@
                 and heartache. Peace and Love, Travis.
             </p>
         </li>
+        <li>
+            <!-- <img src="/ref/leaders/Sam.jpg"> -->
+            <h1>Keenan</h1>
+            <p>
+                I have actively been a part of Doulos for the past two years and continue to experience the blessing of
+                growing in a community of new friendships with like-minded, passionate followers of Jesus. Impressed
+                with the desire to pursue a career in medicine, Doulos provides the spiritual foundation and support
+                needed to relentlessly follow after God’s voice amid discouragement or distractions and allow myself to
+                be used for His glory. God has the responsibility to open the door, we have the responsibility to say
+                yes.
+            </p>
+        </li>
     </ul>
     <script src="/scripts/app.js"></script>
 </body>
