--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -75,8 +75,19 @@
         <li>
             <img src="/ref/leaders/Demi.jpg">
             <h1>Demi</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>
+                Love God & love people unconditionally. My desire is always to simply be a little vessel of God's love
+                Emoji . I have a deep passion for people and the arts and I'm forever inspired to create through His
+                creation. Music, painting, writing-- you name it, I'll love it! Share with me! God has shown me through
+                the years what it is to bring beauty from ashes in my own life and I only wish to point people to Jesus
+                so He can work through them to show them their own beauty. Seeing things from His eyes has changed my
+                perspective in more than one way and has given me an appreciation of this beautiful life that God has
+                given us and just a love for people. There is power in unity-- especially in unity with Christ. Hoping
+                to just bring even a little speck of hope & joy to people’s lives through Christ now and eventually in
+                missions. More of Him, less of me.
+                <br>“And above all these put on love, which binds everything together in perfect harmony”- Colossians
+                3:14
+            </p>
         </li>
         <li>
             <img src="/ref/leaders/Diana.jpg">
@@ -99,8 +110,12 @@
         <li>
             <img src="/ref/leaders/Keenan.jpg">
             <h1>Keenan</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I have actively been a part of Doulos for the past two years and continue to experience the blessing of
+                growing in a community of new friendships with like-minded, passionate followers of Jesus. Impressed
+                with the desire to pursue a career in medicine, Doulos provides the spiritual foundation and support
+                needed to relentlessly follow after God’s voice amid discouragement or distractions and allow myself to
+                be used for His glory. God has the responsibility to open the door, we have the responsibility to say
+                yes.</p>
         </li>
         <li>
             <img src="/ref/leaders/Kristen.jpg">
@@ -142,21 +157,6 @@
         </li>
         <li>
             <!-- <img src="/ref/leaders/Sam.jpg"> -->
-            <h1>Demi</h1>
-            <p>Love God & love people unconditionally. My desire is always to simply be a little vessel of God's love
-                Emoji . I have a deep passion for people and the arts and I'm forever inspired to create through His
-                creation. Music, painting, writing-- you name it, I'll love it! Share with me! God has shown me through
-                the years what it is to bring beauty from ashes in my own life and I only wish to point people to Jesus
-                so He can work through them to show them their own beauty. Seeing things from His eyes has changed my
-                perspective in more than one way and has given me an appreciation of this beautiful life that God has
-                given us and just a love for people. There is power in unity-- especially in unity with Christ. Hoping
-                to just bring even a little speck of hope & joy to people’s lives through Christ now and eventually in
-                missions. More of Him, less of me.
-                <br>“And above all these put on love, which binds everything together in perfect harmony”- Colossians
-                3:14</p>
-        </li>
-        <li>
-            <!-- <img src="/ref/leaders/Sam.jpg"> -->
             <h1>Travis</h1>
             <p>
                 This is Travis Phelix here. I enjoy sports, nature (particularly the water and the sky) and making and
@@ -169,18 +169,6 @@
                 I feel so uncared for myself. Or how I like to see things come alive in the essence of carpentry and
                 manual labor. God is in all and above all so I long to see God and love in every one amidst the chaos
                 and heartache. Peace and Love, Travis.
-            </p>
-        </li>
-        <li>
-            <!-- <img src="/ref/leaders/Sam.jpg"> -->
-            <h1>Keenan</h1>
-            <p>
-                I have actively been a part of Doulos for the past two years and continue to experience the blessing of
-                growing in a community of new friendships with like-minded, passionate followers of Jesus. Impressed
-                with the desire to pursue a career in medicine, Doulos provides the spiritual foundation and support
-                needed to relentlessly follow after God’s voice amid discouragement or distractions and allow myself to
-                be used for His glory. God has the responsibility to open the door, we have the responsibility to say
-                yes.
             </p>
         </li>
     </ul>
