--- a/new/values/index.html
+++ b/new/values/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf8">
     <title>New to Cornerstone?</title>
     <link rel="stylesheet" href="/styles/style.css?version=19061101">
+    <link rel="stylesheet" type="text/css" href="./value-style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,8 +21,96 @@
 </head>
 
 <body>
-    <div class="banner">
-        <h1>Values</h1>
+    <div id="values-wrapper">
+        <div id="values-background"></div>
+        <div id="values-logo">
+            <img src="/ref/logos/doulos_logo_white.png">
+        </div>
+        <div id="bottom-gradient"></div>
+        <div id="bottom-solid"></div>
+        <div id="top-gradient"></div>
+        <ul class="values-list">
+            <li>
+                <div class="value-header">
+                    We will always have Christ at the center of our community
+                </div>
+                <div class="value-section">
+                    A community centered around anything but Christ is pointless
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We are dependent on prayer
+                </div>
+                <div class="value-section">
+                    Hearing from God is the only way we will be what he wants us to be
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We refuse to be clanging cymbals
+                </div>
+                <div class="value-section">
+                    We love God and love people
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We celebrate diversity and fight for unity
+                </div>
+                <div class="value-section">
+                    a community comprised of diverse and unified individuals who set aside differences for the common goal of knowing Christ and making Him known cannot be stopped
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We are developing a dynamic group of world changers
+                </div>
+                <div class="value-section">
+                    World changers wake up every day knowing that the mission field starts at the end of their fingertips and extends to the ends of the earth
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We are real and honest
+                </div>
+                <div class="value-section">
+                    We come as we are, speak truth in love, and are never afraid to say how we feel.
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We practice what we preach
+                </div>
+                <div class="value-section">
+                    We strive for authenticity and not hypocrisy
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We will lead the way in hospitality
+                </div>
+                <div class="value-section">
+                    We believe first time guests are just friends we have not met yet
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We give our best in everything we do
+                </div>
+                <div class="value-section">
+                    Excellence pleases God and inspires man
+                </div>
+            </li>
+            <li>
+                <div class="value-header">
+                    We care about spiritual and personal growth
+                </div>
+                <div class="value-section">
+                    We want to be well rounded contributors to society and God's kingdom
+                </div>
+            </li>
+        </ul>
     </div>
 </body>
 
