Added video in placeholder

--- a/new/index.html
+++ b/new/index.html
@@ -22,12 +22,8 @@
 <body>
 
     <section>
-        <a class="image-button" href="/smallgroups/">
-            <img src="/ref/new_page/about.jpg">
-            <div class="overlay">
-                <div class="image-button--text">Video</div>
-            </div>
-        </a>
+        <iframe class="image-button" width="100%" height="100%" src="https://www.youtube.com/embed/u7c6BJ79y1c" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <a class="image-button" href="./values/">
             <img src="/ref/new_page/about.jpg">
             <div class="overlay">
