--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -145,8 +145,11 @@
         <li>
             <img src="/ref/leaders/Lily.jpg">
             <h1>Lily</h1>
-            <p>Test description jkafsdkj ahjkfdajhk dafjkhl afjkl fjlkf adsjkldaf sjkl afdkjd afskjl adfsjlkf easjkla
-                efkje asfkjleasf jk efsjklsef klj esafjkleas fkjlesf jklef akjlsae.</p>
+            <p>I love people, nature, photography & every form of art, but most of all: Jesus. I've been loving Him
+                since I was 9 years old, and when I learned He delights in using His people, I became an open vessel who
+                says: "Here I am, use me". Somehow that has led me to serve here at Doulos for over 3 years. I love to
+                be part of a community that seeks Him and that encourages growth and my hope is that every person that
+                joins us can experience His unconditional love.</p>
         </li>
         <li>
             <img src="/ref/leaders/Mari.jpg">
