Added miranda's image

--- a/new/leaders/index.html
+++ b/new/leaders/index.html
@@ -118,6 +118,18 @@
                 yes.</p>
         </li>
         <li>
+                <img src="/ref/leaders/Miranda.jpg">
+                <h1>Miranda</h1>
+                <p>Hey! I’m Miranda. I am a Graphic Designer and Photographer. Outside of my profession, I enjoy spending my
+                    time on a potter’s wheel, exploring new places, playing pretty much any kind of sport, and traveling the
+                    world. For me, Doulos has provided an authentic community that is supportive and spiritually eager to
+                    seek after God. I believe we all are created uniquely, and with that have unique life experiences that
+                    can be used to encourage, challenge, and bring others to God and it is our responsibility to get out
+                    there and share those experiences. My desire is to equip others to be able to always know that they are
+                    loved first and foremost by God, to be a presence of encouragement in the midst of the chaos that this
+                    world brings, and impart a desire on people to seek after God by the way I live my life. </p>
+            </li>
+        <li>
             <img src="/ref/leaders/Kristen.jpg">
             <h1>Kristen</h1>
             <p>I am first and foremost a worshiper of Jesus, completely in awe of His goodness and mercy. Currently I am
@@ -173,18 +185,6 @@
                 manual labor. God is in all and above all so I long to see God and love in every one amidst the chaos
                 and heartache. Peace and Love, Travis.
             </p>
-        </li>
-        <li>
-            <!-- <img src="/ref/leaders/Keenan.jpg"> -->
-            <h1>Miranda</h1>
-            <p>Hey! I’m Miranda. I am a Graphic Designer and Photographer. Outside of my profession, I enjoy spending my
-                time on a potter’s wheel, exploring new places, playing pretty much any kind of sport, and traveling the
-                world. For me, Doulos has provided an authentic community that is supportive and spiritually eager to
-                seek after God. I believe we all are created uniquely, and with that have unique life experiences that
-                can be used to encourage, challenge, and bring others to God and it is our responsibility to get out
-                there and share those experiences. My desire is to equip others to be able to always know that they are
-                loved first and foremost by God, to be a presence of encouragement in the midst of the chaos that this
-                world brings, and impart a desire on people to seek after God by the way I live my life. </p>
         </li>
     </ul>
     <script src="/scripts/app.js"></script>
