--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    
+
 <head>
     <title>Welcome to Cornerstone</title>
     <link rel="stylesheet" href="/styles/style.css?version=19061101">
@@ -60,6 +60,16 @@
                     <h2 id="cag-website-text">CAG.org</h2>
                 </div>
             </a>
+            <div id="social-media">
+                <div id="social-media--wrapper">
+                    <a href="https://www.facebook.com/DoulosCAG/" target="_blank">
+                        <img src="/ref/icons/fb-icon.png">
+                    </a>
+                    <a href="https://www.instagram.com/douloscag/" target="_blank">
+                        <img src="/ref/icons/ig-icon.png">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/scripts/app.js"></script>
