--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf8">
     <title>New to Doulos</title>
-    <link rel="stylesheet" href="/styles/style.css?version=19061101">
+    <link rel="stylesheet" href="/styles/style.css?version=19091601">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,15 +25,15 @@
         <iframe class="image-button" width="100%" height="100%" src="https://www.youtube.com/embed/u7c6BJ79y1c" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <a class="image-button" href="./values/">
-            <img src="/ref/textures/DoulosBackground_white.jpg">
+        <a class="image-button" style="background: var(--theme-secondary-color)" href="./values/">
+            <!-- <img src="/ref/textures/DoulosBackground_white.jpg"> -->
             <div class="overlay">
                 <div class="image-button--text">Values</div>
             </div>
         </a>
 
         <a class="image-button" href="./leaders/">
-            <img src="/ref/textures/DoulosBackground_white.jpg">
+            <!-- <img src="/ref/textures/DoulosBackground_white.jpg"> -->
             <div class="overlay">
                 <div class="image-button--text">Leaders</div>
             </div>
